# ChatPRFAQ

./: .gitignore  .replit  =0.40.0  =1.0.0  DEVELOPMENT.md  MARKDOWN_MIGRATION_SUMMARY.md  README.md  REPORTING.md  app.py  browser_tools_functions.sh  build-for-deployment.sh  check_browser_tools.sh  claude_processor.py  config.py  deploy.py  llm_processor.py  main.py  package-lock.json  package.json  perplexity_processor.py  pyproject.toml  quick_test.py  replit.md  routes.py  run_dev.py  run_flask_only.py  start_browser_tools.sh  start_browser_tools_fixed.sh  start_browser_tools_simple.sh  stop_browser_tools.sh  test_api.py
attached_assets/: Pasted--INFO-STATE-CHANGE-from-app-to-landing-index-GxYGLWI-js-195-INFO-HANDLE-START-EVA-1749517199002_1749517199003.txt  Pasted--VITE-v5-4-19-ready-in-261-ms-Local-http-localhost-3000-Network-use-host-to-ex-1747940474321.txt  Pasted-2025-06-09-18-21-40-99-62193c0a-User-2025-06-10-01-21-40-997-processors-llm-processor-INFO-e-1749518737710_1749518737710.txt  Pasted-Requirements-Document-LLM-Powered-Product-Concept-Evaluator-V1-1-Introduction-1-1-Project-Title-1747866419422.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
processors/: claude_processor.py  llm_processor.py  perplexity_processor.py
static/: reporting.css  reporting.js
static/css/: style.css
static/js/: main.js
templates/: index.html  reporting.html
tests/: quick_test.py  test_api.py
utils/: database_service.py  raw_output_cache.py
(+37 files in other folders)
