[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "anthropic>=0.40.0",
    # "google-generativeai>=0.8.5",  # Kept for potential future use
    "markdown-it-py>=3.0.0",
    "openai>=1.0.0",
]
